--- a/_toc.yml
+++ b/_toc.yml
@@ -21,6 +21,7 @@ parts:
   - caption: Code
     chapters:
       - file: code/examples/example_ConsPensionModel_baseline
+      - file: code/examples/example_ConsPensionModel_baseline_interact
       - file: code/examples/example_ConsLaborPortfolioModel
       - file: code/examples/example_ConsLaborSeparableModel
       - file: code/examples/example_ConsPensionModel
